# scraping_product

./: .gitignore  .vercelignore  README.md  asgi.py  desktop_launcher.py  packages.txt  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run_ui.sh  scraper.py  scraping_product.spec  scraping_product_m1.spec  update_fruits_excel.py  vercel.json
.cursor/rules/: specify-rules.mdc
.streamlit/: config.toml
api/: index.py
app/: ui.py
catalog/: brand_aliases.csv  brands.csv  categories.xlsx  categories_flat.xlsx  category_mapping_rules.xlsx  modules.xlsx  subcategories.xlsx  units.xlsx
catalog/seeds/: admin_catalog.json
data/: run_history.jsonl
fruits-vegetables/: fruits.xlsx  vegetables.xlsx
jous/: products.xlsx
output_folder/: products.xlsx
output_test/: products.xlsx
pipeline/: __init__.py  arabic_localizer.py  brand_matcher.py  catalog.py  category_rules.py  constants.py  errors.py  exporter.py  field_mapping.py  id_state.py  images.py  maps_runner.py  match_types.py  name_parser.py  paths.py  places_exporter.py  review_report.py  run_history.py  runner.py  tags.py  units_matcher.py
pipeline/scrape/: __init__.py  detector.py  html_scraper.py  instashop.py  maps.py  playwright_bootstrap.py  seoudi_graphql.py
scripts/: build_catalog_xlsx.py  build_desktop.bat  build_desktop.sh  build_mac_m1.sh
specs/001-category-product-export/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-catalog-field-mapping/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
tests/: conftest.py
(+24 files in other folders)
